tests/baselines/reference/ClassDeclaration14.errors.txt
==== tests/cases/compiler/ClassDeclaration14.ts (1 errors) ====
    class C {
       foo();
       constructor();
       ~~~~~~~~~~~
!!! ClassDeclaration14.ts(3,4): error TS2238: Function implementation expected.
    }